--- a/_site.yml
+++ b/_site.yml
@@ -15,8 +15,8 @@ navbar:
         href: quit_smoke.html
     - text: "Quit Smoking!"
       href: quite_smoke.html
-    #- text: "Report"
-     # href: 
+    - text: "Final Report"
+      href: final_report.html
     - icon: fa-envelope fa-lg
       href: mailto:<lh3109@cumc.columbia.edu>
     - icon: fa-github fa-lg
